flux/apps/policies/kyverno/verify-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-images
  annotations:
    policies.kyverno.io/category: Signatures
    policies.kyverno.io/severity: critical
    policies.kyverno.io/title: Verify Image Signatures
spec:
  validationFailureAction: Audit
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-flux-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "docker.io/fluxcd/helm-controller:*"
            - "docker.io/fluxcd/image-automation-controller:*"
            - "docker.io/fluxcd/image-reflector-controller:*"
            - "docker.io/fluxcd/kustomize-controller:*"
            - "docker.io/fluxcd/notification-controller:*"
            - "docker.io/fluxcd/source-controller:*"
            - "ghcr.io/fluxcd/helm-controller:*"
            - "ghcr.io/fluxcd/image-automation-controller:*"
            - "ghcr.io/fluxcd/image-reflector-controller:*"
            - "ghcr.io/fluxcd/kustomize-controller:*"
            - "ghcr.io/fluxcd/notification-controller:*"
            - "ghcr.io/fluxcd/source-controller:*"
          mutateDigest: false
          verifyDigest: false
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/fluxcd/*"
                    rekor:
                      url: https://rekor.sigstore.dev
    - name: verify-podinfo-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/stefanprodan/podinfo"
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/podinfo/*"
                    rekor:
                      url: https://rekor.sigstore.dev
